--- a/VKapp/VKapp/View/Base.lproj/Main.storyboard
+++ b/VKapp/VKapp/View/Base.lproj/Main.storyboard
@@ -244,18 +244,27 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JmJ-t2-sDO">
+                                            <rect key="frame" x="352" y="89" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="bottomMargin" secondItem="adU-i7-LJg" secondAttribute="bottom" constant="34" id="859-Tv-dw7"/>
                                         <constraint firstItem="igb-g8-jgQ" firstAttribute="leading" secondItem="V3j-u1-QRr" secondAttribute="leadingMargin" constant="10" id="9Z2-d2-fJu"/>
                                         <constraint firstItem="igb-g8-jgQ" firstAttribute="centerY" secondItem="V3j-u1-QRr" secondAttribute="centerY" id="MLD-2o-cHP"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="adU-i7-LJg" secondAttribute="trailing" constant="10" id="OS6-nt-waC"/>
+                                        <constraint firstAttribute="trailing" secondItem="JmJ-t2-sDO" secondAttribute="trailing" constant="20" id="PJ6-3x-rCs"/>
+                                        <constraint firstAttribute="bottom" secondItem="JmJ-t2-sDO" secondAttribute="bottom" constant="10" id="dai-qW-GHi"/>
                                         <constraint firstItem="adU-i7-LJg" firstAttribute="centerY" secondItem="V3j-u1-QRr" secondAttribute="centerY" id="xAZ-5R-coG"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="groupImage" destination="igb-g8-jgQ" id="0HS-qC-6iz"/>
                                     <outlet property="groupName" destination="adU-i7-LJg" id="DK6-zV-dNa"/>
+                                    <outlet property="membersCount" destination="JmJ-t2-sDO" id="gld-RM-Ck4"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
