--- a/VKapp/VKapp/View/Base.lproj/Main.storyboard
+++ b/VKapp/VKapp/View/Base.lproj/Main.storyboard
@@ -235,30 +235,36 @@
                                                 <constraint firstAttribute="width" constant="100" id="tOY-vZ-ewh"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GroupName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="adU-i7-LJg">
-                                            <rect key="frame" x="291.5" y="45" width="92.5" height="30"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="30" id="9cc-Ml-d1u"/>
-                                            </constraints>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GroupName" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="adU-i7-LJg">
+                                            <rect key="frame" x="170" y="41" width="214" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JmJ-t2-sDO">
-                                            <rect key="frame" x="352" y="89" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <rect key="frame" x="363" y="95.5" width="31" height="14.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Members:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PdU-a1-joc">
+                                            <rect key="frame" x="296.5" y="95.5" width="56.5" height="14.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottomMargin" secondItem="adU-i7-LJg" secondAttribute="bottom" constant="34" id="859-Tv-dw7"/>
                                         <constraint firstItem="igb-g8-jgQ" firstAttribute="leading" secondItem="V3j-u1-QRr" secondAttribute="leadingMargin" constant="10" id="9Z2-d2-fJu"/>
+                                        <constraint firstItem="JmJ-t2-sDO" firstAttribute="leading" secondItem="PdU-a1-joc" secondAttribute="trailing" constant="10" id="B7b-39-8qG"/>
+                                        <constraint firstItem="adU-i7-LJg" firstAttribute="top" secondItem="V3j-u1-QRr" secondAttribute="topMargin" constant="30" id="M5Z-G0-eNe"/>
+                                        <constraint firstItem="adU-i7-LJg" firstAttribute="leading" secondItem="igb-g8-jgQ" secondAttribute="trailing" constant="40" id="M9h-wJ-eBa"/>
                                         <constraint firstItem="igb-g8-jgQ" firstAttribute="centerY" secondItem="V3j-u1-QRr" secondAttribute="centerY" id="MLD-2o-cHP"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="adU-i7-LJg" secondAttribute="trailing" constant="10" id="OS6-nt-waC"/>
                                         <constraint firstAttribute="trailing" secondItem="JmJ-t2-sDO" secondAttribute="trailing" constant="20" id="PJ6-3x-rCs"/>
+                                        <constraint firstAttribute="bottom" secondItem="igb-g8-jgQ" secondAttribute="bottom" constant="10" id="UgS-a2-YF4"/>
+                                        <constraint firstAttribute="bottom" secondItem="PdU-a1-joc" secondAttribute="bottom" constant="10" id="YdQ-Fp-neY"/>
                                         <constraint firstAttribute="bottom" secondItem="JmJ-t2-sDO" secondAttribute="bottom" constant="10" id="dai-qW-GHi"/>
-                                        <constraint firstItem="adU-i7-LJg" firstAttribute="centerY" secondItem="V3j-u1-QRr" secondAttribute="centerY" id="xAZ-5R-coG"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -403,8 +409,8 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AllGroupName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EfX-yW-bpx">
-                                            <rect key="frame" x="292.5" y="45" width="111.5" height="30"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AllGroupName" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EfX-yW-bpx">
+                                            <rect key="frame" x="180" y="50" width="224" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -416,18 +422,36 @@
                                                 <constraint firstAttribute="width" constant="100" id="pkw-SJ-aKl"/>
                                             </constraints>
                                         </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fhS-G5-dF7">
+                                            <rect key="frame" x="363" y="95" width="31" height="15"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Members" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0mY-Jp-EiS">
+                                            <rect key="frame" x="300" y="95.5" width="53" height="14.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="EfX-yW-bpx" firstAttribute="centerY" secondItem="8bh-Bf-Dvx" secondAttribute="centerY" id="7rV-Tu-DW4"/>
+                                        <constraint firstAttribute="bottom" secondItem="0mY-Jp-EiS" secondAttribute="bottom" constant="10" id="0lA-tc-0T0"/>
                                         <constraint firstItem="k20-tg-WKl" firstAttribute="leading" secondItem="8bh-Bf-Dvx" secondAttribute="leadingMargin" constant="10" id="CPF-Ia-C4E"/>
-                                        <constraint firstAttribute="bottom" secondItem="EfX-yW-bpx" secondAttribute="bottom" constant="45" id="HW3-pQ-Qfo"/>
                                         <constraint firstItem="EfX-yW-bpx" firstAttribute="trailing" secondItem="8bh-Bf-Dvx" secondAttribute="trailingMargin" constant="10" id="LCC-GS-iet"/>
+                                        <constraint firstAttribute="trailing" secondItem="fhS-G5-dF7" secondAttribute="trailing" constant="20" id="Lws-hU-GY9"/>
+                                        <constraint firstItem="EfX-yW-bpx" firstAttribute="leading" secondItem="k20-tg-WKl" secondAttribute="trailing" constant="50" id="OOr-zl-QQL"/>
+                                        <constraint firstItem="fhS-G5-dF7" firstAttribute="leading" secondItem="0mY-Jp-EiS" secondAttribute="trailing" constant="10" id="Rwz-n8-AGS"/>
                                         <constraint firstItem="k20-tg-WKl" firstAttribute="centerY" secondItem="8bh-Bf-Dvx" secondAttribute="centerY" id="aub-Kg-2db"/>
+                                        <constraint firstAttribute="bottom" secondItem="k20-tg-WKl" secondAttribute="bottom" constant="10" id="ea3-qu-uEv"/>
+                                        <constraint firstAttribute="bottom" secondItem="fhS-G5-dF7" secondAttribute="bottom" constant="10" id="rx8-1E-WaR"/>
+                                        <constraint firstItem="EfX-yW-bpx" firstAttribute="top" secondItem="8bh-Bf-Dvx" secondAttribute="top" constant="50" id="sv8-iE-w9l"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="allGroupsImage" destination="k20-tg-WKl" id="LZh-0Z-I9Y"/>
                                     <outlet property="allGroupsName" destination="EfX-yW-bpx" id="Xjp-Kd-T2Q"/>
+                                    <outlet property="membersLabel" destination="fhS-G5-dF7" id="9VX-8L-7Kt"/>
                                     <segue destination="YOL-Pk-LrR" kind="unwind" identifier="addGroup" unwindAction="addGroupWithSegue:" id="qX2-4H-0jm"/>
                                 </connections>
                             </tableViewCell>
