--- a/VKapp/VKapp/View/Base.lproj/Main.storyboard
+++ b/VKapp/VKapp/View/Base.lproj/Main.storyboard
@@ -151,17 +151,11 @@
                                                 <constraint firstAttribute="trailing" secondItem="BML-RM-I22" secondAttribute="trailing" id="xX1-hJ-rew"/>
                                             </constraints>
                                             <userDefinedRuntimeAttributes>
-                                                <userDefinedRuntimeAttribute type="number" keyPath="opacity">
-                                                    <real key="value" value="0.0"/>
-                                                </userDefinedRuntimeAttribute>
                                                 <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
                                                     <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </userDefinedRuntimeAttribute>
                                                 <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
                                                     <real key="value" value="1"/>
-                                                </userDefinedRuntimeAttribute>
-                                                <userDefinedRuntimeAttribute type="number" keyPath="shadowRaius">
-                                                    <real key="value" value="10"/>
                                                 </userDefinedRuntimeAttribute>
                                                 <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
                                                     <real key="value" value="10"/>
@@ -256,12 +250,11 @@
                                     <constraints>
                                         <constraint firstItem="igb-g8-jgQ" firstAttribute="leading" secondItem="V3j-u1-QRr" secondAttribute="leadingMargin" constant="10" id="9Z2-d2-fJu"/>
                                         <constraint firstItem="JmJ-t2-sDO" firstAttribute="leading" secondItem="PdU-a1-joc" secondAttribute="trailing" constant="10" id="B7b-39-8qG"/>
+                                        <constraint firstItem="igb-g8-jgQ" firstAttribute="centerY" secondItem="V3j-u1-QRr" secondAttribute="centerY" id="KAU-ia-UKu"/>
                                         <constraint firstItem="adU-i7-LJg" firstAttribute="top" secondItem="V3j-u1-QRr" secondAttribute="topMargin" constant="30" id="M5Z-G0-eNe"/>
                                         <constraint firstItem="adU-i7-LJg" firstAttribute="leading" secondItem="igb-g8-jgQ" secondAttribute="trailing" constant="40" id="M9h-wJ-eBa"/>
-                                        <constraint firstItem="igb-g8-jgQ" firstAttribute="centerY" secondItem="V3j-u1-QRr" secondAttribute="centerY" id="MLD-2o-cHP"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="adU-i7-LJg" secondAttribute="trailing" constant="10" id="OS6-nt-waC"/>
                                         <constraint firstAttribute="trailing" secondItem="JmJ-t2-sDO" secondAttribute="trailing" constant="20" id="PJ6-3x-rCs"/>
-                                        <constraint firstAttribute="bottom" secondItem="igb-g8-jgQ" secondAttribute="bottom" constant="10" id="UgS-a2-YF4"/>
                                         <constraint firstAttribute="bottom" secondItem="PdU-a1-joc" secondAttribute="bottom" constant="10" id="YdQ-Fp-neY"/>
                                         <constraint firstAttribute="bottom" secondItem="JmJ-t2-sDO" secondAttribute="bottom" constant="10" id="dai-qW-GHi"/>
                                     </constraints>
