--- a/VKapp/VKapp/Controllers/News/NewsCell/NewsFeedTableViewCell.xib
+++ b/VKapp/VKapp/Controllers/News/NewsCell/NewsFeedTableViewCell.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,13 +19,6 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BhV-8m-TZ4" userLabel="CardView">
                         <rect key="frame" x="5" y="5" width="310" height="397"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2L7-kM-LYK">
-                                <rect key="frame" x="5" y="60" width="305" height="20.5"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cVI-Rq-cuH" userLabel="BottomView">
                                 <rect key="frame" x="0.0" y="337" width="310" height="60"/>
                                 <subviews>
@@ -106,8 +98,11 @@
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="MiH-Wv-KGL" customClass="GalleryCollectionView" customModule="VKapp" customModuleProvider="target">
-                                <rect key="frame" x="8" y="88.5" width="294" height="240.5"/>
+                                <rect key="frame" x="8" y="128" width="294" height="201"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="201" id="frS-HH-uSw"/>
+                                </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2yz-8e-x05">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -115,19 +110,39 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                             </collectionView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3rj-1A-HtG">
+                                <rect key="frame" x="5" y="60" width="305" height="60"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kND-yh-U7c">
+                                        <rect key="frame" x="0.0" y="4" width="290" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="kND-yh-U7c" secondAttribute="trailing" constant="15" id="2gN-np-ekk"/>
+                                    <constraint firstAttribute="bottom" secondItem="kND-yh-U7c" secondAttribute="bottom" id="2pS-Az-Sbc"/>
+                                    <constraint firstItem="kND-yh-U7c" firstAttribute="leading" secondItem="3rj-1A-HtG" secondAttribute="leading" id="e7u-mn-PFh"/>
+                                    <constraint firstItem="kND-yh-U7c" firstAttribute="width" secondItem="3rj-1A-HtG" secondAttribute="width" multiplier="0.95082" id="gk1-Ps-H0e"/>
+                                    <constraint firstItem="kND-yh-U7c" firstAttribute="top" secondItem="3rj-1A-HtG" secondAttribute="top" constant="4" id="jBX-cI-D5O"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="A5W-r6-Ltu"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="HLH-AX-Ynr"/>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemGray4Color" red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="MiH-Wv-KGL" firstAttribute="top" secondItem="2L7-kM-LYK" secondAttribute="bottom" constant="8" id="61I-B0-ctG"/>
-                            <constraint firstAttribute="trailing" secondItem="2L7-kM-LYK" secondAttribute="trailing" id="8JT-W2-8IX"/>
+                            <constraint firstAttribute="trailing" secondItem="3rj-1A-HtG" secondAttribute="trailing" id="3Cj-iK-OhS"/>
+                            <constraint firstItem="3rj-1A-HtG" firstAttribute="leading" secondItem="BhV-8m-TZ4" secondAttribute="leading" constant="5" id="8bT-7Z-Tag"/>
                             <constraint firstAttribute="trailing" secondItem="Fpd-CE-vhc" secondAttribute="trailing" id="Dmu-JF-Snj"/>
                             <constraint firstAttribute="trailing" secondItem="MiH-Wv-KGL" secondAttribute="trailing" constant="8" id="HNt-gy-OXw"/>
+                            <constraint firstItem="3rj-1A-HtG" firstAttribute="top" secondItem="Fpd-CE-vhc" secondAttribute="bottom" constant="5" id="ICk-Oe-gHw"/>
                             <constraint firstItem="Fpd-CE-vhc" firstAttribute="top" secondItem="BhV-8m-TZ4" secondAttribute="top" constant="5" id="Y75-pv-iMg"/>
-                            <constraint firstItem="2L7-kM-LYK" firstAttribute="leading" secondItem="BhV-8m-TZ4" secondAttribute="leading" constant="5" id="Z20-kR-ZFa"/>
                             <constraint firstAttribute="bottom" secondItem="cVI-Rq-cuH" secondAttribute="bottom" id="ZAV-bw-AAT"/>
                             <constraint firstItem="cVI-Rq-cuH" firstAttribute="leading" secondItem="BhV-8m-TZ4" secondAttribute="leading" id="aHY-Rl-Y4a"/>
-                            <constraint firstItem="2L7-kM-LYK" firstAttribute="top" secondItem="Fpd-CE-vhc" secondAttribute="bottom" constant="5" id="gd7-l0-YsS"/>
                             <constraint firstItem="cVI-Rq-cuH" firstAttribute="top" secondItem="MiH-Wv-KGL" secondAttribute="bottom" constant="8" id="h0p-uc-xag"/>
+                            <constraint firstItem="MiH-Wv-KGL" firstAttribute="top" secondItem="3rj-1A-HtG" secondAttribute="bottom" constant="8" id="hHs-CF-N3N"/>
                             <constraint firstItem="MiH-Wv-KGL" firstAttribute="leading" secondItem="BhV-8m-TZ4" secondAttribute="leading" constant="8" id="kda-hL-bHq"/>
                             <constraint firstAttribute="trailing" secondItem="cVI-Rq-cuH" secondAttribute="trailing" id="ntB-90-Pyt"/>
                             <constraint firstItem="Fpd-CE-vhc" firstAttribute="leading" secondItem="BhV-8m-TZ4" secondAttribute="leading" id="p5V-67-pcD"/>
@@ -150,8 +165,9 @@
                 <outlet property="newsDateLabel" destination="FXZ-SK-js2" id="bdg-Uc-kv8"/>
                 <outlet property="newsImage" destination="53A-vf-dH7" id="vbe-pf-eXn"/>
                 <outlet property="newsNameLabel" destination="0T2-LF-Dan" id="fk8-5X-Xb0"/>
-                <outlet property="postTextLabel" destination="2L7-kM-LYK" id="X1A-Zc-uSs"/>
+                <outlet property="postTextLabel" destination="kND-yh-U7c" id="E5S-M2-0O5"/>
                 <outlet property="repostView" destination="97k-cY-eGx" id="nml-7t-icT"/>
+                <outlet property="scrollView" destination="3rj-1A-HtG" id="glB-ks-oR7"/>
                 <outlet property="viewsView" destination="KTe-1k-rXD" id="Axu-tv-BXB"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="246.09375"/>
